<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mflima</groupId>
    <artifactId>KATscans</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>libs</id>
            <name>libs</name>
            <releases>
                <enabled>true</enabled> 
               <checksumPolicy>ignore</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <url>file://${project.basedir}/libs</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>net.infonode.idw</groupId>
            <artifactId>idw</artifactId>
            <version>1.6.1</version>
        </dependency>
        <dependency>
            <groupId>com.bulenkov</groupId>
            <artifactId>darcula</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt-main</artifactId>
            <version>2.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.jogamp.jogl</groupId>
            <artifactId>jogl-all-main</artifactId>
            <version>2.3.2</version>
        </dependency>
<!--        <dependency>
            <groupId>com.mflima</groupId>
            <artifactId>FlowingFrames</artifactId>
            <version>1.0</version>
        </dependency>-->
        <dependency>
            <groupId>org.jfree</groupId>
            <artifactId>jfreechart</artifactId>
            <version>1.0.19</version>
        </dependency>
    </dependencies>
    
    <build>
        <finalName>KATscans</finalName>      
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.mflima.katscans.Init</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- bind to the packaging phase -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.4.0</version>
                <configuration>
                    <mainClass>com.mflima.katscans.Init</mainClass>
                    <executable>java</executable>
                    <arguments>
                        <argument>-jar</argument>                        
                        <argument>${project.build.directory}/${project.build.finalName}-jar-with-dependencies.jar</argument>                        
                    </arguments>
                </configuration>
            </plugin>
                
            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
                <configuration>
                    <target>
                        <move todir="${project.build.directory}/classes/shaders" includeemptydirs="false">
                            <fileset dir="${project.build.directory}/classes/shaders">
                                <exclude name="**/*.vp"/>
                            </fileset>
                            <mapper type="glob" from="*.vs" to="*.vp"/>
                        </move>
                        <move todir="${project.build.directory}/classes/shaders" includeemptydirs="false">
                            <fileset dir="${project.build.directory}/classes/shaders">
                                <exclude name="**/*.fp"/>
                            </fileset>
                            <mapper type="glob" from="*.fs" to="*.fp"/>
                        </move>
                    </target>
                </configuration>
                <executions>
                    <execution>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
